paragraaf en heading toegevoegd in index

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dit is een testgit </title>
 </head>
 <body>
-
+    <h1>Dit is heading 1</h1>
+    <a>Dit is een article</a>
 </body>
 </html>
