--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <h1>Dit is heading 1</h1>
     <a>Dit is een article</a>
     <a>Dit is een article nummer 2</a>
+    <a>Dit is een article nummer 3</a>
+
 </body>
 </html>
